tried to fix footer spacing, somewhat unsuccessful

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
+  padding-bottom: 2rem;
   display: flex;
   justify-content: space-around;
   gap: 3rem;
@@ -337,7 +338,7 @@ img .background {
 
 .footer-copyright {
   text-align: right;
-  margin-top: 15rem;
+  align-self: flex-end;
 }
 
 .form-group {
@@ -437,5 +438,17 @@ img .background {
 
   .image-triplegrid {
     margin-bottom: 1rem;
+  }
+
+  footer {
+    gap: 0;
+  }
+
+  .footer-first {
+    padding: 1rem;
+  }
+
+  .footer-anchor-div {
+    padding-left: 2rem;
   }
 }
